--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,10 @@
     "typeinfo": "cpp",
     "unordered_map": "cpp",
     "utility": "cpp",
-    "vector": "cpp"
-  }
+    "vector": "cpp",
+    "fstream": "cpp",
+    "deque": "cpp",
+    "stack": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
