--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: seungryk <seungryk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 13:06:15 by seungryk          #+#    #+#              #
-#    Updated: 2024/07/03 11:52:25 by seungryk         ###   ########.fr        #
+#    Updated: 2024/07/02 12:02:14 by seungryk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,11 +15,11 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
-NAME = sed
+NAME = hi_this_is_brain
 
 all : $(NAME)
 
-$(NAME) : $(OBJS) $(INCS)
+$(NAME) : $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 $(OBJ_DIR) :
@@ -34,7 +34,6 @@ clean :
 fclean : 
 	rm -rf $(OBJ_DIR)
 	rm -f $(NAME)
-	rm -f *.replace
 
 re : 
 	make fclean
