--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -6,16 +6,17 @@
 #    By: seungryk <seungryk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 13:06:15 by seungryk          #+#    #+#              #
-#    Updated: 2024/07/03 11:52:25 by seungryk         ###   ########.fr        #
+#    Updated: 2024/07/02 13:22:58 by seungryk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = main.cpp
+SRCS = main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
+INCS = HumanA.hpp HumanB.hpp Weapon.hpp 
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
-NAME = sed
+NAME = violence
 
 all : $(NAME)
 
@@ -34,7 +35,6 @@ clean :
 fclean : 
 	rm -rf $(OBJ_DIR)
 	rm -f $(NAME)
-	rm -f *.replace
 
 re : 
 	make fclean
