--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,21 +6,21 @@
 #    By: seungryk <seungryk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 13:06:15 by seungryk          #+#    #+#              #
-#    Updated: 2024/06/29 19:06:32 by seungryk         ###   ########.fr        #
+#    Updated: 2024/09/10 11:57:50 by seungryk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = phonebook.cpp
-INC = phonebook.hpp
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
+SRCS = main.cpp PhoneBook.cpp Contact.cpp
+INC = PhoneBook.hpp Contact.hpp
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
 NAME = phonebook
 
-all : $(NAME)
+all : $(NAME) $(INC)
 
-$(NAME) : $(OBJS) $(INC)
+$(NAME) : $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 $(OBJ_DIR) :
