--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: seungryk <seungryk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/26 13:06:15 by seungryk          #+#    #+#              #
-#    Updated: 2024/07/03 11:52:25 by seungryk         ###   ########.fr        #
+#    Updated: 2024/09/14 21:06:01 by seungryk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp
 OBJ_DIR = obj
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
-NAME = sed
+NAME = ex04
 
 all : $(NAME)
 
