--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,7 +120,8 @@
     "vector": "cpp",
     "fstream": "cpp",
     "deque": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "__functional_03": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
