--- a/cpp05/.vscode/settings.json
+++ b/cpp05/.vscode/settings.json
@@ -34,7 +34,7 @@
     "/w14928"
   ],
   "C_Cpp_Runner.enableWarnings": true,
-  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.warningsAsError": true,
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
@@ -57,6 +57,7 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
+    "exception": "cpp",
     "__bit_reference": "cpp",
     "__config": "cpp",
     "__debug": "cpp",
@@ -89,7 +90,8 @@
     "ctime": "cpp",
     "cwchar": "cpp",
     "cwctype": "cpp",
-    "exception": "cpp",
+    "deque": "cpp",
+    "fstream": "cpp",
     "functional": "cpp",
     "initializer_list": "cpp",
     "iomanip": "cpp",
@@ -107,6 +109,7 @@
     "ostream": "cpp",
     "ratio": "cpp",
     "sstream": "cpp",
+    "stack": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "string": "cpp",
@@ -117,12 +120,6 @@
     "typeinfo": "cpp",
     "unordered_map": "cpp",
     "utility": "cpp",
-    "vector": "cpp",
-    "fstream": "cpp",
-    "deque": "cpp",
-    "stack": "cpp",
-    "__functional_03": "cpp",
-    "filesystem": "cpp"
-  },
-  "C_Cpp.errorSquiggles": "disabled"
+    "vector": "cpp"
+  }
 }
