--- a/cpp06/ex00/.vscode/settings.json
+++ b/cpp06/ex00/.vscode/settings.json
@@ -34,7 +34,7 @@
     "/w14928"
   ],
   "C_Cpp_Runner.enableWarnings": true,
-  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.warningsAsError": true,
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
@@ -57,22 +57,19 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
+    "iostream": "cpp",
     "__bit_reference": "cpp",
     "__config": "cpp",
     "__debug": "cpp",
     "__errc": "cpp",
     "__functional_base": "cpp",
-    "__hash_table": "cpp",
     "__locale": "cpp",
     "__mutex_base": "cpp",
-    "__node_handle": "cpp",
     "__nullptr": "cpp",
-    "__split_buffer": "cpp",
     "__string": "cpp",
     "__threading_support": "cpp",
     "__tuple": "cpp",
     "algorithm": "cpp",
-    "array": "cpp",
     "atomic": "cpp",
     "bit": "cpp",
     "bitset": "cpp",
@@ -92,10 +89,8 @@
     "exception": "cpp",
     "functional": "cpp",
     "initializer_list": "cpp",
-    "iomanip": "cpp",
     "ios": "cpp",
     "iosfwd": "cpp",
-    "iostream": "cpp",
     "istream": "cpp",
     "iterator": "cpp",
     "limits": "cpp",
@@ -103,7 +98,6 @@
     "memory": "cpp",
     "mutex": "cpp",
     "new": "cpp",
-    "optional": "cpp",
     "ostream": "cpp",
     "ratio": "cpp",
     "sstream": "cpp",
@@ -115,14 +109,13 @@
     "tuple": "cpp",
     "type_traits": "cpp",
     "typeinfo": "cpp",
-    "unordered_map": "cpp",
     "utility": "cpp",
-    "vector": "cpp",
-    "fstream": "cpp",
-    "deque": "cpp",
-    "stack": "cpp",
-    "__functional_03": "cpp",
-    "filesystem": "cpp"
-  },
-  "C_Cpp.errorSquiggles": "disabled"
+    "__hash_table": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "array": "cpp",
+    "optional": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp"
+  }
 }
