--- a/cpp08/.vscode/settings.json
+++ b/cpp08/.vscode/settings.json
@@ -64,7 +64,8 @@
     "list": "cpp",
     "stack": "cpp",
     "deque": "cpp",
-    "__memory": "cpp"
+    "__memory": "cpp",
+    "climits": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "clang",
   "C_Cpp_Runner.cppCompilerPath": "clang++",
