--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -122,6 +122,8 @@
     "utility": "cpp",
     "vector": "cpp",
     "__tree": "cpp",
-    "map": "cpp"
+    "map": "cpp",
+    "__memory": "cpp",
+    "filesystem": "cpp"
   }
 }
