--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -124,6 +124,7 @@
     "__tree": "cpp",
     "map": "cpp",
     "__memory": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "list": "cpp"
   }
 }
